# ibkr_rust

./: .gitignore  Cargo.toml  Functions to implement.csv  Functions to implement.xlsx  README.md  Scanner filters to implement  codes and names.csv  config.toml  eclient_methods.csv  mkt_depth.txt  test_out.txt
.zed/: tasks.json
ibkr_rust_macros/: Cargo.toml
ibkr_rust_macros/src/: debug_trait.rs  getters.rs  lib.rs  security.rs  send_trait.rs  variant_value.rs
resources/: filter_list  filter_list_simple  resp_scan_param_gateway.xml  resp_scan_param_rust.xml  scan_codes  scan_codes2  scan_param_xml_parse.md
src/: account.rs  annoying_order.rs  client.rs  comm.rs  constants.rs  contract.rs  currency.rs  decode.rs  exchange.rs  execution.rs  figi.rs  lib.rs  limits.rs  market_data.rs  message.rs  message2.rs  order.rs  payload.rs  prelude.rs  reader.rs  scanner.rs  scanner_parameters.rs  scanner_subscription.rs  tick.rs  timezone.rs  wrapper.rs
src/ibkr_tws_api_derive/: Cargo.toml
src/ibkr_tws_api_derive/src/: lib.rs
tests/: account_portfolio.rs  account_updates.rs  data_request.rs  execution_filters.rs  historical_data.rs  limits_test.rs  order_ser.rs  scanner_parameters.rs  scanner_parameters_test.rs  scanner_subscription.rs  scanner_subscription_test.rs  test_scanner.rs  wrapper_varieties.rs
