[package]
name = "ibapi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust port of the Interactive Brokers TWS API."
repository = "https://github.com/wvietor/ibkr-tws-api"
keywords = ["trading", "interactive_brokers", "IBKR"]
categories = ["finance"]


[dependencies]
ibapi_macros = { version="0.1.0", path= "ibkr_rust_macros" }
tokio = { version = "1.38.1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
toml = "0.8.15"
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam = "0.8.4"
bytes = "1.6.1"
itoa = "1.0.11"
ryu = "1.0.18"
trait-variant = "0.1.2"
thiserror = "1.0.63"
