[package]
name = "ibapi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust port of the Interactive Brokers TWS API."
repository = "https://github.com/wvietor/ibkr-tws-api"
keywords = ["trading", "interactive_brokers", "IBKR"]
categories = ["finance"]


[dependencies]
ibapi_macros = { version="0.1.0", path= "ibkr_rust_macros" }
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
chrono = { version = "0.4.38", features = ["serde"] }
crossbeam = "0.8.4"
bytes = "1.7.1"
itoa = "1.0.11"
ryu = "1.0.18"
trait-variant = "0.1.2"
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18" }
tracing-test = { version = "0.2.5"} #features = ["no-env-filter"]
quick-xml = {version = "0.36.1", features = ["async-tokio", "encoding"] }
convert_case = "0.6.0"
