[package]
name = "ibapi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A Rust port of the Interactive Brokers TWS API."
repository = "https://github.com/wvietor/ibkr-tws-api"
keywords = ["trading", "interactive_brokers", "IBKR"]
categories = ["finance"]


[dependencies]
ibapi_macros = { version="0.1.0", path= "ibkr_rust_macros" }
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = { version = "0.10.0" }
bytes = "1.7.2"
itoa = "1.0.11"
ryu = "1.0.18"
trait-variant = "0.1.2"
thiserror = "1.0.64"
tracing = "0.1.40"
quick-xml = "0.36.2"
serde_json = "1.0.128"
