[package]
name = "ibapi_macros"
version = "0.1.0"
authors = ["William Vietor <will.vietor@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.86"
syn = { version = "2.0.77", features = ["full"] }
